--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@gnosis.pm/safe-contracts": "^1.2.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "2.5.1",
     "@typechain/ethers-v5": "^6.0.5",
     "@types/chai": "^4.2.17",
     "@types/chai-as-promised": "^7.1.3",
