--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gnosis.pm/safe-core-sdk",
+  "name": "@rsksmart/safe-core-sdk",
   "version": "0.1.1",
   "description": "Safe Core SDK",
   "main": "dist/src/index.js",
